# i-lang

./: .clang-format  .clang-tidy  .gitignore  .gitlab-ci.yml  CMakeLists.txt  CONTRIBUTING.md  README.md  generate-grammar.sh
res/: Grammar.y
src/: Codegen.cpp  Codegen.h  Config.h  Lexer.cpp  Lexer.h  Main.cpp  Operators.cpp  Scope.cpp  SemanticPass.cpp  Semantics.h  Tree.cpp  Tree.h  Types.cpp  Utils.h
src/testing/: Testing.cpp  Testing.h  TracingAllocator.cpp
tests/: Test1.cpp  Test2.cpp  Test3.cpp  TestLLVM.cpp
tests/res/: file.txt  main.1.ll  main.2.ll  test1_1.i  test2_1.i  test3_1.i
